remove old vertical alignment accommodation of chrome bug, fix pre/code font disparity

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -52,17 +52,9 @@ tt {
   max-width: 100%;
   overflowX: scroll;
 }
-code,
-pre,
-pre code {
-  vertical-align: top;
-}
-code,
-pre {
-  font-size: 0.9375em;
-}
 code {
   display: inline-block;
+  font-size: 0.9375em;
   vertical-align: baseline;
 }
 pre {
